objects/SCP_Certa_GC__Contenedor_de_hito2__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contenedor de hitos2</relationshipLabel>
        <relationshipName>Contenedor_de_hitos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Fecha_vencimiento_otros_servicios__c</fullName>
        <label>Fecha vencimiento otros servicios</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__vencimiento_datos_fijos__c</fullName>
        <label>vencimiento datos fijos</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__vencimiento_servicios_moviles__c</fullName>
        <label>vencimiento servicios moviles</label>
        <type>Date</type>
    </fields>
    <label>Contenedor de hito2</label>
    <nameField>
        <label>Nombre de Contenedor_de_hito2__c</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contenedor de hitos2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>